<resources>
    <string name="app_name">PjaidMobile</string>
    <string name="action_settings">Settings</string>
    <string name="error_description_empty">Opis awarii nie może być pusty.</string>
    <string name="report_sent_success">Zgłoszenie wysłane!</string>
    <string name="unknown_error">Wystąpił nieznany błąd.</string>
    <string name="report_error_prefix">Błąd zgłoszenia: </string>
    <string name="scan_prompt">Zeskanuj kod QR urządzenia</string>
    <string name="scan_cancelled">Skanowanie anulowane</string>
    <string name="device_not_found">Nie znaleziono urządzenia</string>
    <string name="api_error_prefix">Błąd API: </string>
    <string name="unknown_api_error">Wystąpił nieznany błąd API.</string>
    <string name="report_problem">Zgłoś awarię</string>
    <string name="scan_qr">Zeskanuj kod QR</string>
    <string name="device_info">Informacje o urządzeniu</string>
    <string name="describe_error">Opisz awarię</string>
    <string name="report">Zgłoś</string>
    <string name="welcome_to_pjaid">Welcome to PJAID</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="logo_description">PJAID Logo</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="wrong_login_or_password">Błędny login lub hasło</string>
    <string name="ticket_title_prefix">Zgłoszenie: %1$s\n</string>
    <string name="logo">Logo</string>
    <string name="ticket_type">Rodzaj zgłoszenia:</string>
    <string name="failure">Awaria</string>
    <string name="downtime">Przestój</string>
    <string name="report_title">Tytuł zgłoszenia</string>
    <string name="report_description">Opis zgłoszenia</string>
    <string name="report_send">Wyślij zgłoszenie</string>
    <string name="back">Wstecz</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="technician">Technik:</string>
    <string name="status">Status:</string>
    <string name="data">Data:</string>
    <string name="go_to_details">Przejdź do szczegółów</string>
    <string name="report_list">Lista zgłoszeń</string>
    <string name="logout">Wyloguj się</string>
    <string name="app_logo">App logo</string>
    <string name="description_instruction">Opis działań</string>
    <string name="duration_time">Czas trwania (minuty)</string>
    <string name="final_comments">Uwagi końcowe</string>
    <string name="save_report">Zapisz raport</string>
    <string name="export_csv">Eksportuj jako CSV</string>
    <string name="export_xls">Eksportuj jako XLS</string>
    <string name="register_data">Wprowadź dane do rejestracji:</string>
    <string name="e_mail">E-mail</string>
    <string name="pass_word">Hasło</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="register">Zarejestruj się</string>
    <string name="report_details">Szczegóły zgłoszenia</string>
    <string name="reset_password">Resetuj hasło</string>
    <string name="type_email">Wpisz swój e-mail</string>
    <string name="reset_password_link">Wyślij link resetujący hasło</string>
    <string name="application_logo">Logo aplikacji</string>
    <string name="assigned_to">Assigned to:</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="arrow">➔</string>
    <string name="status_pending">Status: Oczekuje</string>
    <string name="technician_lack">Technik: Brak</string>
    <string name="logged_user">Zalogowany użytkownik: %1$s</string>
    <string name="unknown_user">Nieznany użytkownik</string>
    <string name="camera_permission_error">Brak uprawnień do kamery</string>
    <string-array name="status_options">
        <item>NOWE</item>
        <item>W TRAKCIE</item>
        <item>ZAKOŃCZONE</item>
    </string-array>
    <string name="save">Zapisz i zakończ</string>
    <string name="logo_description.">Logo aplikacji</string>
    <string name="description">Opis zgłoszenia:</string>
    <string name="assigned">Przypisany do:</string>
    <string name="created">Utworzono:</string>

</resources>