<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- tło -->
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@null" />

    <!-- logo -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- karta - formularz -->
    <androidx.cardview.widget.CardView
        android:id="@+id/register_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="10dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_data"
                android:textColor="#212121"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginBottom="12dp" />


            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:backgroundTint="#4D5A88D1"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_word"
                android:inputType="textPassword"
                android:padding="12dp"
                android:backgroundTint="#4D5A88D1"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:backgroundTint="#4D5A88D1"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:backgroundTint="@color/material_dynamic_primary20"
                android:textColor="@android:color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
